tests/NormalTests/paczka1/small_fuzzy/64387232.err
Error in line 12: 0ZCS7VzUjVx S639 98,6
